# HAL-py

./: pyproject.toml
hal/: CommandType.py  Common.py  FMEController.py  Port.py  __main__.py
pyhal/: CommandType.py  Common.py  FMEController.py  Port.py  __main__.py
