[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhal"
version = "0.1.0"
description = "An open source, cross platform, Hardware Abstraction Layer for Redbox kiosks"
authors = [{ name = "Puyodead1", email = "puyodead@proton.me" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyserial"]

[project.optional-dependencies]
dev = ["black"]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 150
